attached_assets/Pasted-WARNING-library-LiquidCrystal-I2C-claims-to-run-on-avr-architecture-s-and-may-be-incompatible-with-1757094817063_1757094817075.txt
WARNING: library LiquidCrystal I2C claims to run on avr architecture(s) and may be incompatible with your current board which runs on esp32 architecture(s).
D:\Yakin IoT\Skripsi\Skripsi.ino: In function 'void ukurBPMEnhanced()':
D:\Yakin IoT\Skripsi\Skripsi.ino:415:15: error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?
  415 |           if (bmpValidCount < BPM_MIN_SAMPLES) {
      |               ^~~~~~~~~~~~~
      |               bpmValidCount
D:\Yakin IoT\Skripsi\Skripsi.ino:424:31: error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?
  424 |           for (int i = 0; i < bmpValidCount; i++) {
      |                               ^~~~~~~~~~~~~
      |                               bpmValidCount
D:\Yakin IoT\Skripsi\Skripsi.ino:425:20: error: 'bmpReadings' was not declared in this scope; did you mean 'bpmReadings'?
  425 |             sum += bmpReadings[i];
      |                    ^~~~~~~~~~~
      |                    bpmReadings
D:\Yakin IoT\Skripsi\Skripsi.ino:427:11: error: 'bmp_final' was not declared in this scope; did you mean 'bpm_final'?
  427 |           bmp_final = sum / bmpValidCount;
      |           ^~~~~~~~~
      |           bpm_final
D:\Yakin IoT\Skripsi\Skripsi.ino:427:29: error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?
  427 |           bmp_final = sum / bmpValidCount;
      |                             ^~~~~~~~~~~~~
      |                             bpmValidCount
D:\Yakin IoT\Skripsi\Skripsi.ino:441:34: error: 'bmp_final' was not declared in this scope; did you mean 'bpm_final'?
  441 |       lcd.print("BPM: " + String(bmp_final));
      |                                  ^~~~~~~~~
      |                                  bpm_final
D:\Yakin IoT\Skripsi\Skripsi.ino:443:38: error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?
  443 |       lcd.print("Samples: " + String(bmpValidCount) + "/" + String(BPM_MIN_SAMPLES));
      |                                      ^~~~~~~~~~~~~
      |                                      bpmValidCount
D:\Yakin IoT\Skripsi\Skripsi.ino: In function 'void bacaTekananDarahEnhanced()':
D:\Yakin IoT\Skripsi\Skripsi.ino:637:14: error: 'bmp_final' was not declared in this scope; did you mean 'bpm_final'?
  637 |     hexBPM = bmp_final; // Gunakan BPM yang akurat dari sensor
      |              ^~~~~~~~~
      |              bpm_final
D:\Yakin IoT\Skripsi\Skripsi.ino: In function 'int calculateQualityScore()':
D:\Yakin IoT\Skripsi\Skripsi.ino:787:7: error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?
  787 |   if (bmpValidCount >= BPM_MIN_SAMPLES && spo2ValidCount >= SPO2_MIN_SAMPLES) {
      |       ^~~~~~~~~~~~~
      |       bpmValidCount
exit status 1

Compilation error: 'bmpValidCount' was not declared in this scope; did you mean 'bpmValidCount'?